--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,21 @@
 @tailwind utilities;
 
 body {
-	@apply bg-gradient-to-br from-green-400 to-green-800 text-white;
+	background: linear-gradient(
+		180deg,
+		rgba(34, 193, 195, 1) 0%,
+		rgba(11, 60, 93, 1) 100%
+	);
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+	padding: 2rem;
 }
 
 h1,
@@ -21,6 +29,30 @@ h6 {
 	color: white;
 }
 
-.container {
-	padding: 2rem;
+select {
+	background-color: #1e3a8a; /* Fondo azul oscuro */
+	color: white;
+	border: none;
+}
+
+table {
+	background-color: rgba(255, 255, 255, 0.2); /* Fondo translúcido */
+}
+
+th,
+td {
+	border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+th {
+	background-color: rgba(0, 0, 0, 0.5); /* Fondo más oscuro para encabezados */
+}
+
+td {
+	background-color: rgba(
+		255,
+		255,
+		255,
+		0.1
+	); /* Fondo translúcido para celdas */
 }
