--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+/* Añade el siguiente código para mejorar la visibilidad del navbar */
+nav {
+	background-color: #2d6a4f;
+}
+
+nav .container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+nav .container .flex {
+	display: flex;
+	align-items: center;
+}
+
+nav .container .flex img {
+	height: 3rem; /* Ajusta el tamaño del logo */
+	width: 3rem; /* Ajusta el tamaño del logo */
+}
+
+nav .container .flex span {
+	font-size: 1.5rem; /* Aumenta el tamaño del texto del logo */
+}
+
+nav .container .space-x-8 a {
+	font-size: 1.25rem; /* Aumenta el tamaño del texto de los links */
 }
